# zz-fork-poltergeist

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: integration.yml  publish.yml
poltergeist/: __init__.py  decorator.py  result.py
tests/: test_decorator.py  test_result.py
