[project]
name = "poltergeist"
version = "0.0.0"
description = "Rust-like error handling in Python, with type-safety in mind."
authors = [{ name = "Alexander Malyga", email = "alexander@malyga.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
  "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/alexandermalyga/poltergeist"
Repository = "https://github.com/alexandermalyga/poltergeist"

[dependency-groups]
dev = [
  "pytest>=7.4.4",
  "mypy>=1.8.0",
  "ruff>=0.4.0",
  "pytest-mypy-plugins>=3.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.3"
]

[tool.mypy]
strict = true

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = ["pragma: not covered", "@overload"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
